--- a/DemoPrototype/OperatorPage.xaml
+++ b/DemoPrototype/OperatorPage.xaml
@@ -155,11 +155,11 @@
                     <chart:TextAnnotation Text="Double-click to freeze/run then drag lines to measure" FontWeight="ExtraLight" FontSize="16" CoordinateUnit="Pixel" X1="50" Y1="100"></chart:TextAnnotation>
                     <!-- <chart:RectangleAnnotation X1="50" Y1="50"  X2="100" Y2="100" CoordinateUnit="Pixel" Text="17-0" Fill="HotPink"></chart:RectangleAnnotation> -->
                     <!-- vertical lines are tricky to position -->
-                    <chart:VerticalLineAnnotation  CanDrag="True" ShowToolTip="True" ToolTipContent="Drag to measure difference between lines" Name="MouldingDelayVLine1"  DragCompleted="MouldingDelayVLine1_DragCompleted" CoordinateUnit="Pixel" X1="20"></chart:VerticalLineAnnotation>
-                    <chart:VerticalLineAnnotation CanDrag="True" ShowToolTip="True" ToolTipContent="Drag to measure difference between lines" Name="MouldingDelayVLine2" DragCompleted="MouldingDelayVLine2_DragCompleted" CoordinateUnit="Pixel" X1="50"></chart:VerticalLineAnnotation>
+                    <chart:VerticalLineAnnotation  Stroke="Blue" StrokeThickness="2" CanDrag="True" ShowToolTip="True" ToolTipContent="Drag to measure difference between lines" Name="MouldingDelayVLine1"  DragCompleted="MouldingDelayVLine1_DragCompleted" CoordinateUnit="Pixel" X1="20"></chart:VerticalLineAnnotation>
+                    <chart:VerticalLineAnnotation Stroke="Blue" StrokeThickness="2" CanDrag="True" ShowToolTip="True" ToolTipContent="Drag to measure difference between lines" Name="MouldingDelayVLine2" DragCompleted="MouldingDelayVLine2_DragCompleted" CoordinateUnit="Pixel" X1="50"></chart:VerticalLineAnnotation>
                 </chart:SfChart.Annotations>
-                <chart:LineSeries LegendIcon="Diamond" Label="T Return Actual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:LineSeries>
-                <chart:LineSeries LegendIcon="Diamond" Label="T Return Forecasted" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"></chart:LineSeries>
+                <chart:LineSeries LegendIcon="Diamond" Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:LineSeries>
+                <chart:LineSeries LegendIcon="Diamond" Label="TRetForecasted" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"></chart:LineSeries>
             </chart:SfChart>
             <!-- Make a textbox overlay the grid above-->
             <TextBox Name="PhaseDiffResult" Grid.Row="2" Background="Yellow" BorderThickness="0" Grid.Column="2" HorizontalAlignment="Center"  VerticalAlignment="Center" Text="Diff = 5"></TextBox>
@@ -178,28 +178,27 @@
             <chart:SfChart.SecondaryAxis>
                 <chart:NumericalAxis Minimum="0" Interval="10" Maximum="300" EnableAutoIntervalOnZooming="False">
                     <chart:NumericalAxis.StripLines>
-                        <chart:ChartStripLine Start="200" Width="20" Label="Hot Tank Safe Zone" Background="PaleGreen"></chart:ChartStripLine>
-                        <chart:ChartStripLine Start="15" Width="30" Label="Cold Tank Safe Zone" Background="PaleGoldenrod"></chart:ChartStripLine>
+                        <chart:ChartStripLine Name="HotSafeZone" Start="200" Width="25" Label="Hot Tank Safe Zone" Background="PaleGreen"></chart:ChartStripLine>
+                        <chart:ChartStripLine Name="ColdSafeZone"  Start="15" Width="25" Label="Cold Tank Safe Zone" Background="PaleGoldenrod"></chart:ChartStripLine>
                     </chart:NumericalAxis.StripLines>
                 </chart:NumericalAxis>
             </chart:SfChart.SecondaryAxis>
                 <chart:SfChart.Annotations>
-                    <chart:RectangleAnnotation CanDrag="True" DraggingMode="Vertical" CoordinateUnit="Axis" Y1="100" Y2="120" Text="Testing" Fill="Coral">
-                        
-                    </chart:RectangleAnnotation>
+                    <chart:HorizontalLineAnnotation Name="SetHotSafeZoneLine" ShowToolTip="True" ToolTipContent="Drag to set threshold" DragCompleted="SetHotSafeZoneLine_DragCompleted" DragDelta="SetHotSafeZoneLine_DragDelta" CanDrag="True" CoordinateUnit="Axis" Y1="200" Stroke="DarkGreen" StrokeThickness="2"></chart:HorizontalLineAnnotation>
+                    <chart:HorizontalLineAnnotation Name="SetColdSafeZoneLine" ShowToolTip="True" ToolTipContent="Drag to set threshold" CanDrag="True" Stroke="OrangeRed" CoordinateUnit="Axis" Y1="15" StrokeThickness="2" DragDelta="SetColdSafeZoneLine_DragDelta" DragCompleted="SetColdSafeZoneLine_DragCompleted"></chart:HorizontalLineAnnotation>
                 </chart:SfChart.Annotations>    
             <chart:SfChart.Legend>
                     <chart:ChartLegend  DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Visible"/>
             </chart:SfChart.Legend>
 
-                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="Ret Actual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"/>
-                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="Ret Forecasted" XBindingPath="ElapsedTime" YBindingPath="TReturnForecasted" ItemsSource="{Binding power}"/>
-                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="Hot tank" XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"/>
-                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="Cold tank"  XBindingPath="ElapsedTime" YBindingPath="TCoolTank"  ItemsSource="{Binding power}"/>
-                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="Hot Buffer" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"/>
-                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="Mid Buffer" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"/>
-                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="Cold Buffer" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"/>
-                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="Ret Valve"  XBindingPath="ElapsedTime" YBindingPath="TReturnValve" ItemsSource="{Binding power}"/>
+                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TRetActual" ItemsSource="{Binding power}"/>
+                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="TRetForecasted" XBindingPath="ElapsedTime" YBindingPath="TRetForecasted" ItemsSource="{Binding power}"/>
+                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="THotTank" XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"/>
+                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="TColdTank"  XBindingPath="ElapsedTime" YBindingPath="TCoolTank"  ItemsSource="{Binding power}"/>
+                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="THotBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"/>
+                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="TMidBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"/>
+                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="TColdBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"/>
+                <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="TRetValve"  XBindingPath="ElapsedTime" YBindingPath="TRetValve" ItemsSource="{Binding power}"/>
                 <chart:FastLineBitmapSeries LegendIcon="Diamond" Label="THeaterOilOut"  XBindingPath="ElapsedTime" YBindingPath="THeaterOilOut" ItemsSource="{Binding power}"/>
                 <chart:StepLineSeries LegendIcon="Diamond" Label="ValveFeedHot"  XBindingPath="ElapsedTime" YBindingPath="ValveFeedHot" ItemsSource="{Binding power}"/>
                 <chart:StepLineSeries LegendIcon="Diamond" Label="ValveFeedCold"  XBindingPath="ElapsedTime" YBindingPath="ValveFeedCold" ItemsSource="{Binding power}"/>
@@ -245,7 +244,7 @@
                 
             </chart:SfChart.SecondaryAxis>
                 
-            <chart:StepLineSeries Label="TReturn" XBindingPath="ElapsedTime" YBindingPath="State" ItemsSource="{Binding power}"></chart:StepLineSeries>
+            <chart:StepLineSeries XBindingPath="ElapsedTime" YBindingPath="State" ItemsSource="{Binding power}"></chart:StepLineSeries>
         </chart:SfChart>
             
 
@@ -270,15 +269,15 @@
                     </chart:NumericalAxis>
                 </chart:SfChart.SecondaryAxis>
                 <chart:SfChart.Annotations>
-                    <chart:HorizontalLineAnnotation Name="PhaseHLine1" Stroke="Red" StrokeThickness="2" CanDrag="True" DragCompleted="PhaseLine1_Dragged" CoordinateUnit="Axis" Y1="150"></chart:HorizontalLineAnnotation>
-                    <chart:HorizontalLineAnnotation Name="PhaseHLine2" Stroke="Blue" StrokeThickness="2" CanDrag="True" DragCompleted="PhaseLine2_Dragged" CoordinateUnit="Axis" Y1="40"></chart:HorizontalLineAnnotation>
-                    <chart:HorizontalLineAnnotation Name="PhaseHLineTBM" Stroke="Green" StrokeThickness="2" CanDrag="True" DragCompleted="PhaseLineTBM_Dragged" CoordinateUnit="Axis" Y1="90"></chart:HorizontalLineAnnotation>
+                    <chart:HorizontalLineAnnotation Name="PhaseHLine1" ShowToolTip="True" ToolTipContent="Drag to set threshold" Stroke="Red" StrokeThickness="2" CanDrag="True" DragCompleted="PhaseLine1_Dragged" CoordinateUnit="Axis" Y1="150"></chart:HorizontalLineAnnotation>
+                    <chart:HorizontalLineAnnotation Name="PhaseHLine2" ShowToolTip="True" ToolTipContent="Drag to set threshold" Stroke="Blue" StrokeThickness="2" CanDrag="True" DragCompleted="PhaseLine2_Dragged" CoordinateUnit="Axis" Y1="40"></chart:HorizontalLineAnnotation>
+                    <chart:HorizontalLineAnnotation Name="PhaseHLineTBM" ShowToolTip="True" ToolTipContent="Drag to set threshold" Stroke="Green" StrokeThickness="2" Opacity="0" CanDrag="True" DragCompleted="PhaseLineTBM_Dragged" CoordinateUnit="Axis" Y1="90"></chart:HorizontalLineAnnotation>
                 </chart:SfChart.Annotations>
 
                 <!-- Want to show a trendline for the mid buffer temperature could not find howto -->
-                <chart:LineSeries LegendIcon="InvertedTriangle" Stroke="DarkRed" Interior="DarkRed" Label="Hot Buffer Temp" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"></chart:LineSeries>
-                <chart:LineSeries LegendIcon="Diamond" Stroke="darkGreen" Interior="darkGreen" Label="Mid Buffer Temp" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"></chart:LineSeries>
-                <chart:LineSeries LegendIcon="Triangle" Stroke="DarkBlue" Interior="DarkBlue" Label="Cold Buffer Temp" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"></chart:LineSeries>
+                <chart:LineSeries LegendIcon="InvertedTriangle" Stroke="DarkRed" Interior="DarkRed" Label="THotBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferHot" ItemsSource="{Binding power}"></chart:LineSeries>
+                <chart:LineSeries LegendIcon="Diamond" Stroke="darkGreen" Interior="darkGreen" Label="TMidBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferMid" ItemsSource="{Binding power}"></chart:LineSeries>
+                <chart:LineSeries LegendIcon="Triangle" Stroke="DarkBlue" Interior="DarkBlue" Label="TColdBuffer" XBindingPath="ElapsedTime" YBindingPath="TBufferCold" ItemsSource="{Binding power}"></chart:LineSeries>
             </chart:SfChart>
 
             <chart:SfChart  
@@ -292,7 +291,7 @@
                     <chart:TimeSpanAxis ></chart:TimeSpanAxis>
                 </chart:SfChart.PrimaryAxis>
                 <chart:SfChart.Legend>
-                    <chart:ChartLegend  DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Visible"/>
+                    <chart:ChartLegend  DockPosition="Floating" LegendPosition="Outside" CheckBoxVisibility="Collapsed"/>
                 </chart:SfChart.Legend>
                 <chart:SfChart.SecondaryAxis>
                     <chart:NumericalAxis Minimum="0" Interval="20" Maximum="300" EnableAutoIntervalOnZooming="False">
@@ -302,14 +301,14 @@
                     </chart:NumericalAxis>
                 </chart:SfChart.SecondaryAxis>
                 <chart:SfChart.Annotations>
-                    <chart:HorizontalLineAnnotation Name="HotTankHLine" Stroke="DarkRed" StrokeThickness="2" CanDrag="True" DragCompleted="HotTankHLine_Dragged"  CoordinateUnit="Axis" Y1="65"></chart:HorizontalLineAnnotation>
-                    <chart:HorizontalLineAnnotation Name="ColdTankHLine" Stroke="DarkBlue" StrokeThickness="2" CanDrag="True"  DragCompleted="ColdTankHLine_Dragged" CoordinateUnit="Axis" Y1="45"></chart:HorizontalLineAnnotation>
+                    <chart:HorizontalLineAnnotation Name="HotTankHLine" ShowToolTip="True" ToolTipContent="Drag to set threshold" Stroke="DarkRed" StrokeThickness="2" CanDrag="True" DragCompleted="HotTankHLine_Dragged"  CoordinateUnit="Axis" Y1="65"></chart:HorizontalLineAnnotation>
+                    <chart:HorizontalLineAnnotation Name="ColdTankHLine" ShowToolTip="True" ToolTipContent="Drag to set threshold" Stroke="DarkBlue" StrokeThickness="2" CanDrag="True"  DragCompleted="ColdTankHLine_Dragged" CoordinateUnit="Axis" Y1="45"></chart:HorizontalLineAnnotation>
                 </chart:SfChart.Annotations>
                 <!-- Return Valve not yet simulated showing another curve -->
-                <chart:LineSeries LegendIcon="Diamond" Stroke="Orange" Interior="Orange" Label="TReturnActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:LineSeries>
+                <chart:LineSeries LegendIcon="Diamond" Stroke="Orange" Interior="Orange" Label="TRetActual" XBindingPath="ElapsedTime" YBindingPath="TReturnActual" ItemsSource="{Binding power}"></chart:LineSeries>
                 <chart:LineSeries LegendIcon="Diamond" Stroke="Red" Interior="Red" Label="THotTank" XBindingPath="ElapsedTime" YBindingPath="THotTank" ItemsSource="{Binding power}"></chart:LineSeries>
                 <chart:LineSeries LegendIcon="Diamond" Stroke="Blue" Interior="Blue" Label="TColdTank" XBindingPath="ElapsedTime" YBindingPath="TColdTank" ItemsSource="{Binding power}"></chart:LineSeries>
-                <chart:LineSeries LegendIcon="Diamond" Stroke="Green" Interior="Green" Label="ReturnValve" XBindingPath="ElapsedTime" YBindingPath="TReturnValve" ItemsSource="{Binding power}"></chart:LineSeries>
+                <chart:LineSeries LegendIcon="Diamond" Stroke="Green" Interior="Green" Label="TRetValve" XBindingPath="ElapsedTime" YBindingPath="TReturnValve" ItemsSource="{Binding power}"></chart:LineSeries>
             </chart:SfChart>
         </Grid>
 
