Code refactoring have been done. Better selection of different data sources. Backup of Log messages to files

--- a/DemoPrototype/MainPage.xaml
+++ b/DemoPrototype/MainPage.xaml
@@ -12,6 +12,9 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
+        
+        <!-- SwapChainPanel x:Name="ImageSwapChainPanel"/ -->
+        
         <RelativePanel>
             <Button Name="HamburgerButton"
                     RelativePanel.AlignLeftWithPanel="True"
@@ -85,6 +88,5 @@
                 <Frame Name="MyFrame"></Frame>
             </SplitView.Content>
         </SplitView>
-        
     </Grid>
 </Page>
