--- a/DemoPrototype/SettingsPage.xaml
+++ b/DemoPrototype/SettingsPage.xaml
@@ -24,36 +24,44 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Row="1"  Orientation ="Horizontal">
+        <StackPanel Margin="2,5,0,0" Grid.Row="1"  Orientation ="Horizontal">
             <TextBlock Width="200" VerticalAlignment="Center" Text="Temperature unit to use" ></TextBlock>
             <RadioButton x:Name="TempUnitCelsius"  Content="Celsius"   Margin="6,0,0,0" Checked="TempUnitCelsius_Checked"/>
             <RadioButton x:Name="TempUnitFahrenheit" Content="Fahrenheit"  Margin="10,0,0,0"  Checked="TempUnitFahrenheit_Checked"/>
         </StackPanel>
 
 
-        <StackPanel Grid.Row="2" Orientation="Horizontal">
+        <StackPanel Margin="2,5,0,0" Grid.Row="2" Orientation="Horizontal">
             <TextBlock Width="200" VerticalAlignment="Center" Text="Log events to remote system"></TextBlock>
             <ToggleSwitch  Margin="5,0,0,0" IsOn="False"></ToggleSwitch>
             <TextBlock VerticalAlignment="Center" Margin="5,0,0,0" Text="Remote logger:"></TextBlock>
             <TextBox Margin="5,0,0,0" Text="IP name or number"></TextBox>
         </StackPanel>
 
-        <StackPanel Grid.Row="3" Orientation="Horizontal" Tapped="adminPassword_Tapped">
+        <StackPanel Margin="2,5,0,0" Grid.Row="3" Orientation="Horizontal" Tapped="adminPassword_Tapped">
             <TextBlock Width="200" VerticalAlignment="Center" Text="Change Password Admin"></TextBlock>
             <PasswordBox x:Name="adminPassword" Margin="5,0,0,0" Width="100" Height="32" VerticalAlignment="Top" GotFocus="PasswordBox_GotFocus" />
         </StackPanel>
 
-        <StackPanel Margin="0,5,0,0" Grid.Row="4" Orientation="Horizontal">
+        <StackPanel Margin="2,5,0,0" Grid.Row="4" Orientation="Horizontal">
             <TextBlock Width="200" VerticalAlignment="Center" Text="Change Password User"></TextBlock>
             <PasswordBox x:Name="userPassword" Margin="5,0,0,0" Width="100"  ></PasswordBox>
         </StackPanel>
 
-        <StackPanel Visibility="Visible" Margin="0,20,0,0" Grid.Row="5" Orientation="Horizontal">
-            <TextBlock Width="200" VerticalAlignment="Center" Text="Select AOU Data Source"></TextBlock>
-            <ComboBox x:Name="AOUDataSourceTypesCombo" SelectionChanged="AOUDataSourceTypeChanged"></ComboBox>
-            <TextBlock x:Name="AOUDataSourceStringText" Margin="25,0,0,0" VerticalAlignment="Center" Text="Select Data Source String"></TextBlock>
-            <TextBox x:Name="AOUDataSourceString" Margin="5,0,0,0" Width="400" LostFocus="AOUDataSourceString_LostFocus"></TextBox>
+        <StackPanel Margin="2,20,0,0" Grid.Row="5" Orientation="Horizontal">
+            <TextBlock Margin="0,0,0,0" VerticalAlignment="Center" Text="Select AOU Data Source"/>
+            <ComboBox x:Name="AOUDataSourceTypesCombo" Margin="2,0,0,0" SelectionChanged="AOUDataSourceTypeChanged"/>
+            <TextBlock x:Name="Param1Text" Margin="20,0,0,0" VerticalAlignment="Center" Text="Param1"/>
+            <ComboBox x:Name="Param1Combo" Margin="2,0,0,0"/>
+            <TextBlock x:Name="Param2Text" Margin="20,0,0,0" VerticalAlignment="Center" Text="Param2"/>
+            <ComboBox x:Name="Param2Combo" Margin="2,0,0,0"></ComboBox>
+            <TextBlock x:Name="Param3Text" Margin="25,0,0,0" VerticalAlignment="Center" Text="Param3"/>
+            <TextBox x:Name="FileName" Margin="5,0,0,0" Width="200"></TextBox>
             <Button x:Name="pickButton" Content="Pick" Margin="10,0,0,0" Click="pickButton_Click"/>
+            <Button x:Name="StartStopButton" Content="Start"  Margin="25,0,0,0" Click="StartStopButton_Click"/>
+        </StackPanel>
+        <StackPanel Margin="0,5,0,0" Grid.Row="6" Orientation="Horizontal">
+            <TextBlock x:Name="SourceStatus" Margin="5,2,0,2" VerticalAlignment="Center" Text=""/>
         </StackPanel>
     </Grid>
 </Page>
